--- a/src/sidescroller.tex
+++ b/src/sidescroller.tex
@@ -71,6 +71,10 @@ const CANVAS_HEIGHT = CANVAS_LTRB[TOP] - CANVAS_LTRB[BOT];
 const CANVAS_WIDTH = CANVAS_LTRB[RIGHT] - CANVAS_LTRB[LEFT];
 const CANVAS_CENTER_H = CANVAS_HEIGHT * 0.5 + CANVAS_LTRB[BOT];
 const CANVAS_CENTER_W = CANVAS_WIDTH * 0.5 + CANVAS_LTRB[LEFT];
+% Calculate units per char
+const PER_CHAR = CANVAS_WIDTH / FIELD_WIDTH;
+% Calculate units per line
+const PER_LINE = CANVAS_HEIGHT / FIELD_HEIGHT;
 % Gravity stats
 const GRAVITY = [0.0, -0.25];
 var force = [0.0, 0.0];
@@ -292,7 +296,6 @@ function gameLoop() {
         return;
     }
 
-
     if (fieldCounter < FIELD_WIDTH) {
         printInfoText("Wait for the game to finish generating.");
     } else {
@@ -306,11 +309,15 @@ function gameLoop() {
     }
 
     % Check for collision and gameover
-    var res = testCollisions();
+    var res = testCollisionObstacle();
     if (res != -1) {
         gameover = true;
         % Mark collided obstacle
         markObstacle(res, true);
+        return;
+    }
+    if (testCollisionLine()) {
+        gameover = true;
         return;
     }
 
@@ -333,7 +340,7 @@ function gameLoop() {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 function refreshObstacles() {
     % Calculate units per line
-    const perLine = CANVAS_HEIGHT / FIELD_HEIGHT;
+    const PER_LINE = CANVAS_HEIGHT / FIELD_HEIGHT;
 
     var spawn = getRandomFloat(0.0, 1.0) > 0.9;
     for (var i = 0; i < OBSTACLE_COUNT; i++) {
@@ -343,8 +350,8 @@ function refreshObstacles() {
             var curTop = getLine(fieldCounter, START_TOP_LINE);
             var curBot = getLine(fieldCounter, START_BOT_LINE);
             % Get bounds in units while keeping the lines in mind
-            var uBound = CANVAS_LTRB[TOP] - curTop * perLine - OBSTACLE_WIDTH;
-            var lBound = CANVAS_LTRB[BOT] + (FIELD_HEIGHT - curBot) * perLine + OBSTACLE_WIDTH;
+            var uBound = CANVAS_LTRB[TOP] - curTop * PER_LINE - OBSTACLE_WIDTH;
+            var lBound = CANVAS_LTRB[BOT] + (FIELD_HEIGHT - curBot) * PER_LINE + OBSTACLE_WIDTH;
             var y = getRandomFloat(lBound, uBound);
 
             var symb = String.fromCharCode(SYMBOLS[getRandomInt(SYMBOLS.length)]);
@@ -357,7 +364,7 @@ function refreshObstacles() {
     }
 }
 
-function testCollisions() {
+function testCollisionObstacle() {
     const pLeft = playerPos[X] - PLAYER_WIDTH;
     const pTop = playerPos[Y] + PLAYER_WIDTH;
     const pRight = playerPos[X] + PLAYER_WIDTH;
@@ -377,6 +384,28 @@ function testCollisions() {
     }
 
     return -1;
+}
+
+% Test against the top and bottom line
+function testCollisionLine() {
+    const pLeft = playerPos[X] - PLAYER_WIDTH;
+    const pTop = playerPos[Y] + PLAYER_WIDTH;
+    const pRight = playerPos[X] + PLAYER_WIDTH;
+    const pBot = playerPos[Y] - PLAYER_WIDTH;
+    const pMid = (pRight - pLeft) * 0.5 + pLeft;
+
+    % Sample-positions does not move horizontally
+    const sample = Math.round(pMid / PER_CHAR);
+    var curTop = getLine(fieldCounter - FIELD_WIDTH + sample, START_TOP_LINE);
+    var curBot = getLine(fieldCounter - FIELD_WIDTH + sample, START_BOT_LINE);
+
+    if (CANVAS_LTRB[TOP] - curTop * PER_LINE < pTop) {
+        return true;
+    } else if (CANVAS_LTRB[TOP] - curBot * PER_LINE > pBot) {
+        return true;
+    }
+
+    return false;
 }
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -616,26 +645,6 @@ function printInfoText(text) {
                 \\[0pt]%
             }%
         \end{center}
-
-        %%%%%%%%%%%%%%%%%%%%%%%
-        % Commandredifinition %
-        % https://www.dickimaw-books.com/latex/admin/html/eforms.shtml
-        %%%%%%%%%%%%%%%%%%%%%%%
-        % \def\DefaultHeightofText{14pt}
-        % \renewcommand*{\LayoutTextField}[2]{%
-        %     \parbox[c][\DefaultHeightofText]{0.5\linewidth}{#1#2}%
-        % }
-
-        % \renewcommand*{\LayoutCheckField}[2]{#1 #2}
-        % \renewcommand*{\DefaultWidthofCheckBox}{2ex}
-        % \renewcommand*{\DefaultHeightofCheckBox}{2ex}
-        % \renewcommand*{\LayoutCheckField}[2]{%
-        %     \parbox[c][\DefaultHeightofCheckBox]{0.12\linewidth}{#1}\enspace%
-        %     \parbox[c][\DefaultHeightofCheckBox]{\DefaultWidthofCheckBox}{#2}%
-        % }
-
-        % \renewcommand*{\DefaultWidthofChoiceMenu}{2.5ex}
-        % \renewcommand*{\DefaultHeightofChoiceMenu}{2.04ex}
 
         %%%%%%%%%%%%%%%%
         % GUI elements %
