--- a/src/maumau.tex
+++ b/src/maumau.tex
@@ -21,13 +21,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \def\cards{32}
 
-% Max playercount is 4
-\def\playerCount{4}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Javascript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{insDLJS}[]{JSDateiname}{Gamename}
+\begin{insDLJS}[]{JSDateiname}{Maumau}
 
 const GAME_DESC = "Text.\
 Text.\
@@ -36,6 +33,9 @@ Text.\
 Text.";
 
 % Outside variables
+const CARD_COUNT = AFMakeNumber(\cards);
+% TODO get this from the gui
+var playerCount = 4;
 
 % Constants
 const TEXT_SIZE = 14;
@@ -58,10 +58,11 @@ const CANVAS_CENTER_H = CANVAS_HEIGHT * 0.5 + CANVAS_LTRB[BOT];
 const CANVAS_CENTER_W = CANVAS_WIDTH * 0.5 + CANVAS_LTRB[LEFT];
 
 const CARD_WIDTH = 20;
-const STACK_POS = [CANVAS_CENTER_W - CARD_WIDTH * 1.25, CANVAS_CENTER_H];
-const GRAVE_POS = [CANVAS_CENTER_W + CARD_WIDTH * 1.25, CANVAS_CENTER_H];
+const STACK_POS = [CANVAS_CENTER_W - CARD_WIDTH * 1.25, CANVAS_CENTER_H - 100];
+const GRAVE_POS = [CANVAS_CENTER_W + CARD_WIDTH * 1.25, CANVAS_CENTER_H - 100];
 
 % Globals
+var curPlayer = 0;
 % Player cards
 var playerCards = [
     [], [], [], []
@@ -79,8 +80,13 @@ const CARD_COLORS = [
 const CARD_VALUES = ["7", "8", "9", "10", "B", "Q", "K", "A"];
 const CARDS = [];
 
-% var cardIdxList = [];
-% var cardOrder = [];
+% TODO graveyard?
+var unusedCards = [];
+var stack = [];
+
+const STACK = -1;
+const GRAVEYARD = -2;
+var cardOwner = [];
 
 for (var col = 0; col < CARD_COLORS.length; col++) {
     for (var val = 0; val < CARD_VALUES.length; val++) {
@@ -99,6 +105,12 @@ function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
 
+% TODO
+var gameInterval;
+const ANIMATION_SPEED = 200;
+% TODO
+var curCardIdx = -1;
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -109,8 +121,22 @@ function initialise() {
     % Init the GUI
     initialiseButtons();
 
+    % Init unused cards
+    for (var i = 0; i < CARD_COUNT; i++) {
+        unusedCards.push(i);
+    }
+    for (var i = 0; i < CARD_COUNT; i++) {
+        % Get random element from the  and remove the card afterwards
+        var rnd = getRandomInt(unusedCards.length);
+        stack.push(unusedCards[rnd]);
+        cardOwner.push(STACK);
+        unusedCards.splice(rnd, 1);
+    }
+
     fillCards();
-    initCardPositions();
+
+    curCardIdx = stack.length - 1;
+    gameInterval = app.setInterval("initCardPositions()", ANIMATION_SPEED);
 }
 
 /**
@@ -120,6 +146,12 @@ function initialise() {
 function initialiseButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
+
+    for (var c = 0; c < CARDS.length; c++) {
+        var callbackName = "chooseCard(" + c.toString() + ");";
+        var card = this.getField("card" + c);
+        card.setAction("MouseUp", callbackName);
+    }
 
     % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
@@ -184,6 +216,56 @@ function tooltip(on) {
 %%%%%%%%%%%%%
 % Gamelogic %
 %%%%%%%%%%%%%
+% 1. Drop cards
+% 2. Deploy cards
+% 3. Open first card
+% 4.1 if card on hand is clicked play it
+% 4.2 if card on stack is clicked take it
+
+const PLAYER_POS = [
+    [CANVAS_CENTER_W, CANVAS_LTRB[BOT]],
+    [CANVAS_LTRB[LEFT], CANVAS_CENTER_H],
+    [CANVAS_CENTER_W, CANVAS_LTRB[TOP]],
+    [CANVAS_LTRB[RIGHT], CANVAS_CENTER_H]
+]
+
+function chooseCard(cardIdx) {
+    % Player draws a card
+    if (cardOwner[cardIdx] == STACK) {
+        var card = this.getField("card" + stack[0]);
+        cardOwner[stack[0]] = curPlayer;
+
+        card.delay = true;
+        card.rect = [
+            PLAYER_POS[curPlayer][X] - CARD_WIDTH,
+            PLAYER_POS[curPlayer][Y] + CARD_WIDTH,
+            PLAYER_POS[curPlayer][X] + CARD_WIDTH,
+            PLAYER_POS[curPlayer][Y] - CARD_WIDTH
+        ];
+        card.delay = false;
+
+        drawCardFront(stack[0]);
+        stack.splice(0, 1);
+
+        printInfoText("Player " + curPlayer + " took a card!");
+    } else if (cardOwner[cardIdx] > STACK) {
+        var card = this.getField("card" + cardIdx);
+        card.delay = true;
+        card.rect = [
+            GRAVE_POS[X] - CARD_WIDTH,
+            GRAVE_POS[Y] + CARD_WIDTH,
+            GRAVE_POS[X] + CARD_WIDTH,
+            GRAVE_POS[Y] - CARD_WIDTH
+        ];
+        card.delay = false;
+
+        drawCardFront(cardIdx);
+
+        printInfoText("Player " + curPlayer + " played a card!");
+    }
+
+    curPlayer = (curPlayer + 1) \% playerCount;
+}
 
 %%%%%%%%%%%%%%%%%%%%%
 % Draw and coloring %
@@ -201,33 +283,80 @@ function fillCards() {
         card.textFont = font.Cour;
         card.textSize = TEXT_SIZE;
         card.alignment = "center";
-        card.value = CARDS[c];
+        %card.value = CARDS[c];
         card.delay = false;
     }
 }
 
+function drawCardFront(cardIdx) {
+    var card = this.getField("card" + cardIdx);
+    card.delay = true;
+    card.fillColor = color.white;
+    card.value = CARDS[cardIdx];
+    card.delay = false;
+}
+
+function drawCardBack(cardIdx) {
+    var card = this.getField("card" + cardIdx);
+    card.delay = true;
+    card.fillColor = color.blue;
+    card.value = "";
+    card.delay = false;
+}
+
+const FOCUS_CARD = false;
+var initState = !FOCUS_CARD;
+
 function initCardPositions() {
-    for (var c = 1; c < CARDS.length; c++) {
-        var card = this.getField("card" + c);
-        card.delay = true;
-        card.rect = [
-            STACK_POS[X] - CARD_WIDTH,
-            STACK_POS[Y] + CARD_WIDTH,
-            STACK_POS[X] + CARD_WIDTH,
-            STACK_POS[Y] - CARD_WIDTH
-        ];
-        card.delay = false;
+    printInfoText("jo" + curCardIdx + " " + stack[curCardIdx]);
+
+    if (curCardIdx < 0) {
+        app.clearInterval(gameInterval);
+
+        this.getField("tooltiptxt").setFocus();
+        % for (var i = 0; i < CARD_COUNT; i++) {
+        %     var idx2 = stack[i];
+        %     var card = this.getField("card" + idx2);
+        %     card.readonly = true;
+        % }
+
+        % TODO place top card of stack on graveyard
+
+        return;
     }
 
-    var card = this.getField("card" + 0);
-    card.delay = true;
-    card.rect = [
-        GRAVE_POS[X] - CARD_WIDTH,
-        GRAVE_POS[Y] + CARD_WIDTH,
-        GRAVE_POS[X] + CARD_WIDTH,
-        GRAVE_POS[Y] - CARD_WIDTH
-    ];
-    card.delay = false;
+    % initState = !initState;
+    % if (initState == FOCUS_CARD) {
+    %     var idx = stack[curCardIdx];
+    %     var card = this.getField("card" + idx);
+    %     card.setFocus();
+    %     return;
+    % }
+
+    % for (var c = stack.length - 1; c >= 0; c--) {
+        var idx = stack[curCardIdx];
+        var card = this.getField("card" + idx);
+        %card.delay = true;
+
+        % card.setFocus();
+
+        card.rect = [
+            STACK_POS[X] - CARD_WIDTH,
+            % STACK_POS[X] - CARD_WIDTH + curCardIdx * 30,
+            % STACK_POS[X] * 0.5 - CARD_WIDTH + curCardIdx * 10,
+            STACK_POS[Y] + CARD_WIDTH,
+            STACK_POS[X] + CARD_WIDTH,
+            % STACK_POS[X] + CARD_WIDTH + curCardIdx * 30,
+            % STACK_POS[X] * 0.5 + CARD_WIDTH + curCardIdx * 10,
+            STACK_POS[Y] - CARD_WIDTH
+        ];
+        %card.delay = false;
+    % }
+
+    drawCardBack(curCardIdx);
+
+    curCardIdx--;
+
 }
 
 /**
@@ -268,7 +397,7 @@ function printInfoText(text) {
         % Header
         \begin{multicols}{2}
             % Title
-            \section*{Gamename}
+            \section*{Mau mau}
         \columnbreak
             % Tooltip object
             \begin{flushright}%
@@ -280,6 +409,7 @@ function printInfoText(text) {
             \end{flushright}%
         \end{multicols}
 
+        % TODO make them readonly but carefull because of setFocus
         \begin{tcolorbox}[height=\linewidth, valign=center]
             \xintFor* #1 in {\xintSeq{0}{\cards-1}} \do {%
                 \TextField[name=card#1, width=1cm, height=1cm,%
